--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Nexastats</title>
+    <title>NexaStats</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -37,18 +37,19 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>NEXASTATS</h1>
+            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>NexaStats</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="#home" class="nav-item nav-link active">Home</a>
+                <a href="#about" class="nav-item nav-link">About</a>
+                <a href="#services" class="nav-item nav-link">Services</a>
+                <a href="#whychooseus" class="nav-item nav-link">Why Choose Us</a>
 
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="#contactus" class="nav-item nav-link">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -56,7 +57,7 @@
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0" id="home">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -64,7 +65,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 text-white mb-md-4">Empowering Businesses with Reliable Market Insights</h1>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
+                            <a href="#contactus" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +75,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 text-white mb-md-2">Harness the Power of CAPI, CATI, and CAWI Surveys for Data-Driven Decisions
 </h1>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
+                            <a href="#contactus" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -95,12 +96,12 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid bg-secondary p-0">
+    <div class="container-fluid bg-secondary p-0" id="about">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">NEXASTATS</span></h1>
+                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">NexaStats</span></h1>
                 <h4 class="text-primary mb-4">Your Trusted Partner in Market Research</h4>
-                <p class="mb-4">Nexastats is a leading market research firm specializing in CAPI, CATI, and CAWI surveys. Our mission is to deliver actionable insights through high-quality data collection and analysis. We cater to businesses, government agencies, and research institutions, ensuring data accuracy and strategic decision-making.</p>
+                <p class="mb-4">NexaStats is a leading market research firm specializing in CAPI, CATI, and CAWI surveys. Our mission is to deliver actionable insights through high-quality data collection and analysis. We cater to businesses, government agencies, and research institutions, ensuring data accuracy and strategic decision-making.</p>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -139,7 +140,7 @@
 
 
     <!-- Services Start -->
-    <div class="container-fluid pt-6 px-5">
+    <div class="container-fluid pt-6 px-5" id="services">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 mb-0">What We Offer</h1>
             <hr class="w-25 mx-auto bg-primary">
@@ -205,7 +206,7 @@
 
 
     <!-- Features Start -->
-    <div class="container-fluid py-6 px-5">
+    <div class="container-fluid py-6 px-5" id="whychooseus">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 mb-0">Why Choose Us!!!</h1>
             <hr class="w-25 mx-auto bg-primary">
@@ -273,39 +274,50 @@
     </div>
     <!-- Features Start -->
 
+    <section class="commitment_section">
+      <div>
+        <h1>Commitment Towards Transparency</h1>
+        <p>
+At Our Company, we uphold the highest standards of transparency in survey research, ensuring that every respondent’s voice is accurately represented without bias. We strictly adhere to both international and national regulatory frameworks to maintain data integrity and ethical research practices. Every response is presented exactly as provided, free from manipulation, offering a true reflection of public opinion. Our unwavering commitment to unbiased reporting fosters trust among respondents, clients, and stakeholders, making our surveys a reliable source of actionable insights. By adhering to these principles, we empower data-driven decision-making based on authentic, unaltered information.</p>
+      </div>
+    </section>
 
     <!-- Quote Start -->
-    <div class="container-fluid bg-secondary px-0">
+    <div class="container-fluid bg-secondary px-0" id="contactus">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Request A Free Quote</h1>
-                <p class="mb-4">Kasd vero erat ea amet justo no stet, et elitr no dolore no elitr sea kasd et dolor diam tempor. Nonumy sed dolore no eirmod sit nonumy vero lorem amet stet diam at. Ea at lorem sed et, lorem et rebum ut eirmod gubergren, dolor ea duo diam justo dolor diam ipsum dolore stet stet elitr ut. Ipsum amet labore lorem lorem diam magna sea, eos sed dolore elitr.</p>
-                <form>
+                <h1 class="display-5 mb-4">Contact Us</h1>
+                <p class="mb-4">We’d love to hear from you! Reach out to us for inquiries, collaborations, or more information about our services.
+</p>
+                <form id="contactForm">
                     <div class="row gx-3">
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
+                                <input type="text" class="form-control" id="name" placeholder="John Doe">
                                 <label for="form-floating-1">Full Name</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
+                                <input type="email" class="form-control" id="email" placeholder="name@example.com">
                                 <label for="form-floating-2">Email address</label>
                             </div>
                         </div>
                         <div class="col-6">
-                            <div class="form-floating">
-                                <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Financial Consultancy</option>
-                                    <option value="1">Strategy Consultancy</option>
-                                    <option value="2">Tax Consultancy</option>
-                                </select>
-                                <label for="floatingSelect">Select A Service</label>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="subject" placeholder="name@example.com">
+                                <label for="form-floating-2">Subject</label>
                             </div>
                         </div>
                         <div class="col-6">
-                            <button class="btn btn-primary w-100 h-100" type="submit">Request A Quote</button>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="message" placeholder="name@example.com">
+                                <label for="form-floating-2">message</label>
+                            </div>
+                        </div>
+
+                        <div class="col-6">
+                            <button class="btn btn-primary w-100 h-100" type="submit">Submit</button>
                         </div>
                     </div>
                 </form>
@@ -322,46 +334,29 @@
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-secondary p-5">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
+        <div class="row g-2">
+            <div class="col-lg-6 col-md-2">
                 <h3 class="text-white mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="#home"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="#about"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="#services"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="#whychooseus"><i class="bi bi-arrow-right text-primary me-2"></i>Why Choose Us</a>
+                    <a class="text-secondary" href="#contactus"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Popular Links</h3>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
+
+            <div class="col-lg-6 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Gmail</p>
+                <p class="mb-0"><a href="https://india360.co/privacy.html" class="bi bi-shield-lock text-primary me-2"></a>Privacy Policy</p>
+                <a href="https://india360.co/icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i>Indian Constitutional Provisions for Surveys</a>
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Follow Us</h3>
-                <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram fw-normal"></i></a>
-                </div>
-            </div>
+
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">Your Site Name</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">NexaStats</a>. All Rights Reserved. </p>
     </div>
     <!-- Footer End -->
 
@@ -379,6 +374,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
