--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@ At Our Company, we uphold the highest standards of transparency in survey resear
             <div class="col-lg-6 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Gmail</p>
-                <p class="mb-0"><a href="https://india360.co/privacy.html" class="bi bi-shield-lock text-primary me-2"></a>Privacy Policy</p>
-                <a href="https://india360.co/icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i>Indian Constitutional Provisions for Surveys</a>
+                <p class="mb-0"><a href="privacy_policy.html" class="bi bi-shield-lock text-primary me-2">Privacy Policy</a></p>
+                <a href="icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i>Indian Constitutional Provisions for Surveys</a>
             </div>
 
         </div>
