--- a/icps.html
+++ b/icps.html
@@ -24,11 +24,7 @@
       .header {
         display: flex;
         background-color: #33333317;
-      }
-      .header h1 {
-        color: #ff5a58;
-        padding-top: 20px;
-        padding-left: 20px;
+        padding: 20px 30px;
       }
       .content h1 {
         color: #007acc;
@@ -58,7 +54,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>NexaStats</h1>
+                  <img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;">
     </div>
     <div class="content">
       <h1>Indian Constitutional Provisions for Surveys</h1>
