--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>NexaStats</h1>
+            <img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -349,8 +349,8 @@ At Our Company, we uphold the highest standards of transparency in survey resear
             <div class="col-lg-6 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Gmail</p>
-                <p class="mb-0"><a href="privacy_policy.html" class="bi bi-shield-lock text-primary me-2">Privacy Policy</a></p>
-                <a href="icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i>Indian Constitutional Provisions for Surveys</a>
+                <p class="mb-0"><a href="privacy_policy.html"><i class="bi bi-shield-lock text-primary me-2 mr-2"></i> <u>Privacy Policy</u></a></p>
+                <a href="icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i> <u> Indian Constitutional Provisions for Surveys </u> </a>
             </div>
 
         </div>
@@ -359,10 +359,6 @@ At Our Company, we uphold the highest standards of transparency in survey resear
         <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">NexaStats</a>. All Rights Reserved. </p>
     </div>
     <!-- Footer End -->
-
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
