--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -24,12 +24,9 @@
       .header {
         display: flex;
         background-color: #33333317;
+        padding: 20px 30px;
       }
-      .header h1 {
-        color: #152440;
-        padding-top: 20px;
-        padding-left: 20px;
-      }
+
       .content{
         max-width: 1100px;
         margin: auto;
@@ -66,7 +63,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>NexaStats</h1>
+                  <img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;">
     </div>
     <div class="content">
       <h1>Privacy Policy</h1>
