--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid bg-secondary p-0" id="about">
+    <div class="container-fluid bg-secondary" id="about">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">NexaStats</span></h1>
+                <h1 class="display-5 mb-4 mt-4 py-4">Welcome To <span class="text-primary">NexaStats</span></h1>
                 <h4 class="text-primary mb-4">Your Trusted Partner in Market Research</h4>
                 <p class="mb-4">NexaStats is a leading market research firm specializing in CAPI, CATI, and CAWI surveys. Our mission is to deliver actionable insights through high-quality data collection and analysis. We cater to businesses, government agencies, and research institutions, ensuring data accuracy and strategic decision-making.</p>
             </div>
             <div class="col-lg-6">
-                <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
-                    <div class="d-flex text-white mb-5">
+                <div class="h-100 d-flex flex-column justify-content-center bg-primary py-6 px-5">
+                    <div class="d-flex text-white mb-5 mt-4">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-user-tie fs-4"></i>
                         </div>
@@ -317,12 +317,12 @@ At Our Company, we uphold the highest standards of transparency in survey resear
                         </div>
 
                         <div class="col-6">
-                            <button class="btn btn-primary w-100 h-100" type="submit">Submit</button>
+                            <button id="submit-btn" class="btn btn-primary w-100 h-100" type="submit">Submit</button>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="col-lg-6" style="min-height: 400px;">
+            <div class="contact_image col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute w-100 h-100" src="img/quote.jpg" style="object-fit: cover;">
                 </div>
