--- a/icps.html
+++ b/icps.html
@@ -12,6 +12,7 @@
       * {
         box-sizing: border-box;
         margin: 0;
+        padding: 0;
       }
       body {
         font-family: Arial, sans-serif;
@@ -40,21 +41,25 @@
         padding: 10px 20px;
         border-radius: 10px;
       }
-      div {
-        margin-bottom: 30px;
-      }
+
       .footer{
         text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: absolute;
-        left: 40%;
+        width: 100%;
+        background-color: #152440;
+        height: 60px;
         bottom: 0;
+        color: #f9f9f9;
       }
     </style>
 
   </head>
   <body>
     <div class="header">
-                  <img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;">
+      <a href="index.html"><img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;"></a>
     </div>
     <div class="content">
       <h1>Indian Constitutional Provisions for Surveys</h1>
