--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -35,7 +35,7 @@
         }
         span{
             font-weight: bold;
-            color: #F3525A;
+            color: #333;
         }
 
       }
@@ -48,22 +48,26 @@
         margin: 0 auto;
         border-radius: 10px;
       }
-      div {
-        margin-bottom: 30px;
-      }
+
       .list_main{
         padding: 0;
       }
       .footer{
         text-align: center;
         margin-top: 30px;
+        display: flex;
+        background-color: #152440;
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+        color: #f9f9f9;
       }
     </style>
 
   </head>
   <body>
     <div class="header">
-                  <img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;">
+                  <a href="index.html"><img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;"></a>
     </div>
     <div class="content">
       <h1>Privacy Policy</h1>
