--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
-                <a href="#home" class="nav-item nav-link active">Home</a>
+                <a href="#home" class="nav-item nav-link">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#services" class="nav-item nav-link">Services</a>
                 <a href="#whychooseus" class="nav-item nav-link">Why Choose Us</a>
@@ -110,8 +110,8 @@
                             <i class="fa fa-user-tie fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>CAPI Surveys</h3>
-                            <p class="mb-0">Face-to-face computer-assisted personal interviews for real-time data collection with enhanced accuracy</p>
+                            <h3>Multi Model Surveys</h3>
+                            <p class="mb-0">Conducting structured interviews—whether in-person, by phone, or online—with real-time digital data capture for flexible and scalable research.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -119,19 +119,11 @@
                             <i class="fa fa-chart-line fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>CATI Surveys</h3>
-                            <p class="mb-0"> Computer-assisted telephone interviews for large-scale data gathering with efficiency and reliability.</p>
+                            <h3>Data Driven Insights</h3>
+                            <p class="mb-0"> Turning raw data into insights, managing research panels, and predicting trends through advanced analytics and robust methodologies.</p>
                         </div>
                     </div>
-                    <div class="d-flex text-white">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-balance-scale fs-4"></i>
-                        </div>
-                        <div class="ps-4">
-                            <h3>CAWI Surveys</h3>
-                            <p class="mb-0">Online web-based surveys for quick responses and cost-effective insights.</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
