--- a/icps.html
+++ b/icps.html
@@ -54,6 +54,24 @@
         bottom: 0;
         color: #f9f9f9;
       }
+      @media (max-width: 768px) {
+        .header {
+          flex-direction: column;
+          align-items: center;
+        }
+        .content h1 {
+          font-size: 1.5em;
+        }
+        p {
+          font-size: 1em;
+          padding: 10px;
+        }
+        .footer {
+          position: relative;
+          height: auto;
+          padding: 10px 0;
+        }
+      }
     </style>
 
   </head>
