--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -62,6 +62,23 @@
         height: 60px;
         color: #f9f9f9;
       }
+      @media screen and (max-width: 768px) {
+        .header {
+          flex-direction: column;
+          align-items: center;
+        }
+        .content{
+            padding-left: 30px;
+        }
+        .content h1 {
+          font-size: 1.5em;
+        }
+        p {
+          max-width: 90%;
+          font-size: 0.9em;
+          padding: 10px 15px;
+        }
+      }
     </style>
 
   </head>
