--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ At Our Company, we uphold the highest standards of transparency in survey resear
 
             <div class="col-lg-6 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Gmail</p>
+                <a href="mailto:contact@nexastats.com" class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@nexastats.com</a>
                 <p class="mb-0"><a href="privacy_policy.html"><i class="bi bi-shield-lock text-primary me-2 mr-2"></i> <u>Privacy Policy</u></a></p>
                 <a href="icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i> <u> Indian Constitutional Provisions for Surveys </u> </a>
             </div>
