--- a/icps.html
+++ b/icps.html
@@ -27,11 +27,15 @@
         background-color: #33333317;
         padding: 20px 30px;
       }
+      .content {
+        height: 60vh;
+        overflow-y: scroll;
+        scroll-behavior: smooth;
+      }
       .content h1 {
         color: #007acc;
         margin: 40px 0;
         text-align: center;
-
       }
       p {
         max-width: 80%;
@@ -72,43 +76,172 @@
           padding: 10px 0;
         }
       }
-    </style>
+      .language-selector {
+        display: flex;
+        justify-content: right;
+        padding: 20px;
+        align-items: center;
+      }
 
+      select {
+        padding: 10px;
+        font-size: 1em;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
-      <a href="index.html"><img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;"></a>
+      <a href="index.html">
+        <img
+          src="img/nexastats_logo.png"
+          width="180" />
+      </a>
     </div>
+
+    <div class="language-selector">
+      <label for="language">Select Language:</label>
+      <select
+        id="language"
+        onchange="changeLanguage()">
+        <option value="en">English</option>
+        <option value="hi">Hindi</option>
+        <option value="bn">Bengali</option>
+        <option value="or">Odia</option>
+        <option value="as">Assamese</option>
+        <option value="ta">Tamil</option>
+        <option value="ml">Malayalam</option>
+        <option value="kn">Kannada</option>
+        <option value="te">Telugu</option>
+        <option value="gu">Gujarati</option>
+        <option value="pa">Punjabi</option>
+      </select>
+    </div>
+
     <div class="content">
-      <h1>Indian Constitutional Provisions for Surveys</h1>
-      <p>
-        Article 19 of the Indian Constitution says "Everyone has the right to
-        freedom of opinion and expression, this right includes freedom to hold
-        opinions without interference and to seek, receive and impart
-        information and ideas through any media and regardless of frontiers".
-        Further, the Supreme Court observed that "Freedom of speech and
-        expression includes right to impart and receive information which
-        includes freedom to hold opinions".
-      </p>
-      <p>
-        NexaStats is a law-abiding Indian entity incorporated as a Trust.
-        It has engaged in Market Research activities since its inception, within
-        the electoral and brand domain, inviting people's opinion on
-        socio¬economic issues with no allegiance to any political outfit or
-        organization. Eliciting people's opinion within an ethical framework, on
-        a voluntary basis, towards empowering the citizenry is well within the
-        purview of the constitution and plays a significant role in the
-        democratic machinery.
-      </p>
-      <p>
-        Any obstruction to the field activities carried out by NexaStats
-        through its nominated personnel by any individual, entity or association
-        will be seen as an obstruction to the democratic right provided by the
-        Indian Constitution, inviting legal proceedings.
-      </p>
+      <h1 id="heading"></h1>
+      <p id="para1"></p>
+      <p id="para2"></p>
+      <p id="para3"></p>
     </div>
-    <div class="footer">
-        ©️ NexaStats | All Rights Reserved
-    </div>
+
+    <div class="footer">©️ Nexastats | All Rights Reserved</div>
+
+    <script>
+      const content = {
+        en: {
+          heading: "Indian Constitutional Provisions for Surveys",
+          para1:
+            'Article 19 of the Indian Constitution says "Everyone has the right to freedom of opinion and expression, this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers". Further, the Supreme Court observed that "Freedom of speech and expression includes right to impart and receive information which includes freedom to hold opinions".',
+          para2:
+            "Nexastats is a law-abiding Indian entity incorporated as a Trust. It has engaged in Market Research activities since its inception, within the electoral and brand domain, inviting people's opinion on socio-economic issues with no allegiance to any political outfit or organization. Eliciting people's opinion within an ethical framework, on a voluntary basis, towards empowering the citizenry is well within the purview of the constitution and plays a significant role in the democratic machinery.",
+          para3:
+            "Any obstruction to the field activities carried out by Nexastats through its nominated personnel by any individual, entity or association will be seen as an obstruction to the democratic right provided by the Indian Constitution, inviting legal proceedings.",
+        },
+        hi: {
+          heading: "सर्वेक्षणों के लिए भारतीय संवैधानिक प्रावधान",
+          para1:
+            'भारतीय संविधान के अनुच्छेद 19 में कहा गया है कि "हर व्यक्ति को अभिव्यक्ति की स्वतंत्रता का अधिकार है, जिसमें बिना हस्तक्षेप के विचार रखने और किसी भी माध्यम से तथा सीमाओं की परवाह किए बिना जानकारी और विचारों को प्राप्त करने, देने और प्रसारित करने की स्वतंत्रता शामिल है।" इसके अतिरिक्त, सर्वोच्च न्यायालय ने माना है कि "वाक् और अभिव्यक्ति की स्वतंत्रता में जानकारी प्राप्त करने और देने का अधिकार शामिल है, जिसमें विचार रखने की स्वतंत्रता भी आती है।"',
+          para2:
+            "Nexastats एक कानून का पालन करने वाली भारतीय संस्था है जो एक ट्रस्ट के रूप में पंजीकृत है। यह अपनी स्थापना से ही निर्वाचन और ब्रांड क्षेत्रों में जनमत संग्रह गतिविधियों में संलग्न है, जो सामाजिक-आर्थिक मुद्दों पर लोगों की राय आमंत्रित करती है और किसी भी राजनीतिक संगठन या दल से कोई संबंध नहीं रखती। नागरिकों को सशक्त बनाने की दिशा में स्वैच्छिक और नैतिक रूप से लोगों की राय लेना संविधान की सीमाओं के अंतर्गत है और यह लोकतांत्रिक प्रणाली में एक महत्वपूर्ण भूमिका निभाता है।",
+          para3:
+            "Nexastats द्वारा नामित कर्मियों के माध्यम से किए जा रहे क्षेत्रीय कार्यों में किसी भी व्यक्ति, संस्था या संगठन द्वारा कोई भी बाधा उत्पन्न करना भारतीय संविधान द्वारा प्रदत्त लोकतांत्रिक अधिकारों में बाधा के रूप में देखा जाएगा और इसके विरुद्ध कानूनी कार्यवाही की जाएगी।",
+        },
+        bn: {
+          heading: "সমীক্ষার জন্য ভারতীয় সাংবিধানিক বিধানসমূহ",
+          para1:
+            'ভারতীয় সংবিধানের অনুচ্ছেদ ১৯ অনুযায়ী, "প্রত্যেকের মত প্রকাশের স্বাধীনতা আছে, এই অধিকার অন্তর্ভুক্ত করে বাধা ছাড়াই মতামত রাখার স্বাধীনতা এবং যেকোনো মাধ্যমে এবং সীমানার তোয়াক্কা না করেই তথ্য ও ধারণা অনুসন্ধান, গ্রহণ ও প্রেরণের স্বাধীনতা।" এছাড়াও, সুপ্রিম কোর্ট পর্যবেক্ষণ করেছে যে "বক্তব্য ও মতপ্রকাশের স্বাধীনতার মধ্যে তথ্য প্রদান ও গ্রহণের অধিকার অন্তর্ভুক্ত, যা মতামত রাখার স্বাধীনতাকেও অন্তর্ভুক্ত করে।"',
+          para2:
+            "Nexastats একটি আইন মেনে চলা ভারতীয় প্রতিষ্ঠান যা একটি ট্রাস্ট হিসেবে নিবন্ধিত। এটি তার প্রতিষ্ঠালগ্ন থেকেই নির্বাচন ও ব্র্যান্ড সংক্রান্ত ক্ষেত্রে বাজার গবেষণামূলক কার্যক্রমে নিযুক্ত, যেখানে জনগণের মতামত সামাজিক-অর্থনৈতিক বিষয় নিয়ে আহ্বান করা হয়, এবং এর কোনো রাজনৈতিক দল বা সংগঠনের সঙ্গে কোনো সম্পর্ক নেই। নাগরিকদের ক্ষমতায়নের উদ্দেশ্যে নৈতিক কাঠামোর মধ্যে স্বেচ্ছাসেবাভিত্তিতে মতামত আহ্বান করা সংবিধানের পরিসরের মধ্যে পড়ে এবং এটি গণতান্ত্রিক ব্যবস্থায় একটি গুরুত্বপূর্ণ ভূমিকা পালন করে।",
+          para3:
+            "Nexastats কর্তৃক মনোনীত কর্মীদের মাধ্যমে পরিচালিত মাঠ পর্যায়ের কার্যক্রমে কোনো ব্যক্তি, সংস্থা বা সংগঠন দ্বারা কোনো রকম বাধা সৃষ্টি করা হলে, তা ভারতীয় সংবিধান দ্বারা প্রদত্ত গণতান্ত্রিক অধিকারের পরিপন্থী হিসেবে বিবেচিত হবে এবং এর বিরুদ্ধে আইনানুগ পদক্ষেপ নেওয়া হবে।",
+        },
+        or: {
+          heading: "ସର୍ଭେଗୁଡ଼ିକ ପାଇଁ ଭାରତୀୟ ସଂବିଧାନିକ ବ୍ୟବସ୍ଥା",
+          para1:
+            'ଭାରତୀୟ ସଂବିଧାନର ଅନୁଛେଦ ୧୯ ଅନୁସାରେ, "ପ୍ରତ୍ୟେକଙ୍କର ମତାମତ ଓ ଅଭିବ୍ୟକ୍ତିର ସ୍ୱାଧୀନତାର ଅଧିକାର ଅଛି, ଏହି ଅଧିକାରରେ ବାଧା ବିନା ମତ ଧାରଣ କରିବା, ତଥ୍ୟ ଓ ଧାରଣା ଅନ୍ୱେଷଣ, ଗ୍ରହଣ ଓ ପ୍ରସାରଣ କରିବା ସ୍ୱାଧୀନତା ଅନ୍ତର୍ଭୁକ୍ତ।" ଏହା ଅତିରିକ୍ତ ଭାବରେ, ସୁପ୍ରିମ କୋର୍ଟ ମଧ୍ୟ ଏହା ଅବଲୋକନ କରିଛନ୍ତି ଯେ, "ବକ୍ତବ୍ୟ ଓ ଅଭିବ୍ୟକ୍ତିର ସ୍ୱାଧୀନତାରେ ତଥ୍ୟ ଦେବା ଓ ଗ୍ରହଣ କରିବା ଅଧିକାର ଅନ୍ତର୍ଭୁକ୍ତ, ଯାହା ମତ ଧାରଣ କରିବାର ସ୍ୱାଧୀନତାକୁ ମଧ୍ୟ ଅନ୍ତର୍ଭୁକ୍ତ କରେ।"',
+          para2:
+            "Nexastats ଜଣେ ଆଇନ ଅନୁସାରେ ଚାଲୁଥିବା ଭାରତୀୟ ସଂସ୍ଥା, ଏହା ଏକ ଟ୍ରଷ୍ଟ ଭାବରେ ନିବନ୍ଧିତ। ଏହା ତାହାର ଆରମ୍ଭରୁ ନିର୍ବାଚନୀ ଓ ବ୍ରାଣ୍ଡ ମାନ୍ୟତା ସଂପର୍କିତ ଅଞ୍ଚଳରେ ବଜାର ଗବେଷଣା କାର୍ଯ୍ୟରେ ଲିପ୍ତ, ଯାହା ସାମାଜିକ-ଆର୍ଥିକ ମାମଲା ଉପରେ ଲୋକଙ୍କ ମତାମତ ସଂଗ୍ରହ କରିଥାଏ ଓ କୌଣସି ରାଜନୈତିକ ଦଳ କିମ୍ବା ସଂଗଠନ ସହିତ କୌଣସି ସମ୍ପର୍କ ରଖୁନାହିଁ। ନୀତିମୁଳକ ଢଂଗରେ ଓ ସ୍ୱେଚ୍ଛାପୂର୍ଣ୍ଣ ଭିତ୍ତିରେ ଲୋକଙ୍କ ମତ ଗ୍ରହଣ କରି ନାଗରିକମାନଙ୍କୁ ସଶକ୍ତ କରିବା ସଂବିଧାନ ଅନୁକୂଳ ଓ ଲୋକତାନ୍ତ୍ରିକ ପ୍ରଣାଳୀରେ ଏହା ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ଭୂମିକା ନିଭାଏ।",
+          para3:
+            "Nexastats ତାଙ୍କ ନିମିତ୍ତ କର୍ମଚାରୀମାନେ କରୁଥିବା କ୍ଷେତ୍ର କାର୍ଯ୍ୟକଳାପରେ କୌଣସି ବ୍ୟକ୍ତି, ସଂସ୍ଥା କିମ୍ବା ସଂଗଠନ ଦ୍ୱାରା ବାଧା ସୃଷ୍ଟି କରାଯିବାକୁ, ଭାରତୀୟ ସଂବିଧାନ ଦ୍ୱାରା ପ୍ରଦତ୍ତ ଲୋକତାନ୍ତ୍ରିକ ଅଧିକାରରେ ବାଧା ଭାବରେ ଦେଖାଯିବ ଓ ଏହା ବିରୋଧରେ ଆଇନସମ୍ମତ କାର୍ଯ୍ୟବାହି ହେବ।",
+        },
+        as: {
+          heading: "সৰ্বেৰ বাবে ভাৰতীয় সাংবিধানিক ব্যৱস্থা",
+          para1:
+            'ভাৰতীয় সংবিধানৰ অনুচ্ছেদ ১৯ত কোৱা হৈছে, "প্ৰত্যেকে মতামত প্ৰকাশৰ স্বাধীনতাৰ অধিকাৰ ৰাখে। এই অধিকাৰত বাধা নোহোৱাকৈ মত ধাৰণ কৰাৰ স্বাধীনতা, যিকোনো মাধ্যম আৰু সীমাৰ পাৰ নোহোৱাকৈ তথ্য আৰু ধাৰণা বিচাৰি পোৱা, গ্ৰহণ কৰা আৰু প্ৰেৰণ কৰাৰ অধিকাৰ অন্তৰ্ভুক্ত।" লগতে, সুপ্ৰিম কোৰ্টে অৱলোকন কৰিছে যে, "বক্তব্য আৰু মত প্ৰকাশৰ স্বাধীনতাৰ অৰ্থ হৈছে তথ্য প্ৰেৰণ আৰু গ্ৰহণ কৰাৰ অধিকাৰ, য’ত মত ধাৰণ কৰাৰ স্বাধীনতাও অন্তৰ্ভুক্ত।"',
+          para2:
+            "Nexastats হৈছে এটা আইন মানি চলা ভাৰতীয় প্ৰতিষ্ঠান, যি এটা ট্রাষ্ট হিচাপে পঞ্জীয়ন হোৱা। এই প্ৰতিষ্ঠানে আৰম্ভণিৰ পৰাই নিৰ্বাচনী আৰু ব্ৰেণ্ড ক্ষেত্ৰত বজাৰ গৱেষণাৰ কাৰ্যকলাপত জড়িত, য’ত সামাজিক-আৰ্থিক বিষয়সমূহত লোকৰ মতামত সংগ্ৰহ কৰা হয় আৰু কোনো ৰাজনৈতিক দলেৰে ইয়াৰ কোনো সম্পৰ্ক নাই। নৈতিক কাঠামোৰ ভিতৰত স্বেচ্ছাৰে লোকৰ মতামত লোৱাটো, নাগৰিকসকলক শক্তিশালী কৰাৰ উদ্দেশ্যে, সংবিধানৰ আওতাত পৰে আৰু ই গণতান্ত্ৰিক ব্যৱস্থাত গুৰুত্বপূৰ্ণ ভূমিকা গ্ৰহণ কৰে।",
+          para3:
+            "Nexastatsৰ নিযুক্ত কৰ্মচাৰীসকলে সম্পাদন কৰা ক্ষেত্ৰীয় কাৰ্যকলাপত কোনো ব্যক্তি, প্ৰতিষ্ঠান বা সংগঠনে বাধা সৃষ্টি কৰিলে, তাক ভাৰতীয় সংবিধানে প্ৰদান কৰা গণতান্ত্ৰিক অধিকাৰৰ বিৰুদ্ধে বাধা হিচাপে ধৰা হ’ব আৰু ইয়াৰ বিৰুদ্ধে আইনী ব্যৱস্থা গ্ৰহণ কৰা হ’ব।",
+        },
+        ta: {
+          heading:
+            "கணக்கெடுப்புகளுக்கான இந்திய அரசியலமைப்புச் சட்டத் த்தொழில்கள்",
+          para1:
+            'இந்திய அரசியலமைப்பின் தரவுத்தொகுப்பு 19 இல் கூறப்பட்டுள்ளது: "ஒவ்வொருவருக்கும் கருத்து மற்றும் வெளிப்பாட்டு சுதந்திரம் உள்ளது. இந்த உரிமை, தலையீடு இல்லாமல் கருத்துகளை வைத்திருக்கவும், எந்தவொரு ஊடகமூடாகவும், எல்லைகள் எதுவாக இருந்தாலும் தகவல் மற்றும் யோசனைகளை தேடவும், பெறவும், பரப்பவும் உரிமை அளிக்கிறது." மேலும், உச்ச நீதிமன்றம் கூறியது: "வாக்குச் சுதந்திரமும், கருத்து சுதந்திரமும் தகவலை பெறும் மற்றும் வழங்கும் உரிமையை உள்ளடக்கியதாகும், இது கருத்தை வைத்திருக்கும் சுதந்திரத்தையும் அடங்க வைத்துள்ளது."',
+          para2:
+            "Nexastats என்பது இந்திய சட்டத்தின்படி செயல்படும் ஒரு நம்பிக்கையகம் ஆகும். இது தனது தொடக்கத்திலிருந்தே தேர்தல் மற்றும் பிராண்ட் துறையில் சந்தை ஆய்வுப் பணிகளில் ஈடுபட்டு வருகின்றது. இது எந்தவொரு அரசியல் கட்சி அல்லது அமைப்புடன் தொடர்பில்லாமல், சமூக-பொருளாதாரக் கேள்விகளில் மக்களின் கருத்துகளை கேட்டு வருகிறது. மக்களை அதிகாரமளிக்கும் நோக்கில், ஒழுங்குமுறை மற்றும் விருப்பத்தின் அடிப்படையில் கருத்துகளை பெறுவது, அரசியலமைப்பின் எல்லைகளுக்குள் தான் இருக்கும் மற்றும் ஜனநாயக இயந்திரத்தில் முக்கியப் பங்கு வகிக்கிறது.",
+          para3:
+            "Nexastats நிறுவனத்தின் நியமிக்கப்பட்ட பணியாளர்கள் மேற்கொள்ளும் பணிகளை எந்தவொரு நபர், நிறுவனமோ அல்லது அமைப்போ தடை செய்வது, இந்திய அரசியலமைப்பால் வழங்கப்பட்ட ஜனநாயக உரிமைக்கு எதிரானதாகக் கருதப்படும் மற்றும் சட்டரீதியான நடவடிக்கைகள் எடுக்கப்படும்.",
+        },
+        ml: {
+          heading: "സർവേകൾക്കുള്ള ഇന്ത്യൻ ഭരണഘടനാ വ്യവസ്ഥകൾ",
+          para1:
+            'ഇന്ത്യൻ ഭരണഘടനയുടെ ആർട്ടിക്കിൾ 19 പ്രകാരം, "ഏതൊരാളും അഭിപ്രായ പ്രകടന സ്വാതന്ത്ര്യം享ിക്കുന്നു, അതിൽ ഇടപെടലില്ലാതെ അഭിപ്രായങ്ങൾ നിലനിര്‍ത്താനുള്ള, വിവിധ മാധ്യമങ്ങളിലൂടെ അതിരുകളെ മറികടന്ന് വിവരങ്ങളും ആശയങ്ങളും അന്വേഷിക്കുകയും സ്വീകരിക്കുകയും പകരുകയും ചെയ്യാനുള്ള അവകാശം ഉൾപ്പെടുന്നു." സുപ്രീം കോടതിയും വ്യക്തമാക്കുന്നത്: "അഭിപ്രായം പ്രകടിപ്പിക്കുന്നതിന്റെ സ്വാതന്ത്ര്യം വിവരങ്ങൾ കൈമാറുന്നതിനും സ്വീകരിക്കുന്നതിനും ഉള്ള അവകാശം ഉൾക്കൊള്ളുന്നു, അതിലൂടെയാണ് അഭിപ്രായം നിലനിര്‍ത്താനുള്ള സ്വാതന്ത്ര്യവും ഉറപ്പാക്കപ്പെടുന്നത്."',
+          para2:
+            "Nexastats എന്നത് നിയമം പാലിക്കുന്ന ഒരു ഇന്ത്യൻ സ്ഥാപനമാണ്, ട്രസ്റ്റായി രജിസ്റ്റർ ചെയ്തിരിക്കുന്നു. ആരംഭം മുതലേ തെരഞ്ഞെടുപ്പും ബ്രാൻഡുമായി ബന്ധപ്പെട്ട മേഖലകളിൽ വിപണിശോധന പ്രവർത്തനങ്ങൾ നടത്തിവരുന്നു. ഇത് സാമൂഹ്യ-ആർത്തിക വിഷയങ്ങളിൽ ജനങ്ങളുടെ അഭിപ്രായം സ്വമേധയാ ശേഖരിക്കുന്നു, അതിനൊപ്പം തന്നെ ഏത് രാഷ്ട്രീയ പാർട്ടിയുമായോ സംഘടനയുമായോ ബന്ധപ്പെട്ടതല്ല. പൗരന്മാരെ ശക്തിപ്പെടുത്തുന്നതിനുള്ള ഒരു ആക്ഷേപഹീനമായ പദവിയിൽ, നൈതികമായി സമൂഹത്തിലെ അഭിപ്രായങ്ങൾ ശേഖരിക്കുന്നത് ഭരണഘടനയുടെ പരിധിയിലാണെന്നും ജനാധിപത്യ സംവിധാനത്തിൽ അതീവ പ്രധാനമാണ്.",
+          para3:
+            "Nexastats നിയമിച്ച ജീവനക്കാരുടെ ഫീൽഡ് പ്രവർത്തനങ്ങൾ തടയാൻ ഏത് വ്യക്തിയും സ്ഥാപനവുമായോ സംഘടനയുമായോ ശ്രമിച്ചാൽ, അതിനെ ഇന്ത്യൻ ഭരണഘടന നൽകുന്ന ജനാധിപത്യാവകാശത്തへの ഹനനമായി കണക്കാക്കപ്പെടും, അതനുസരിച്ച് നിയമപരമായ നടപടികൾ സ്വീകരിക്കും.",
+        },
+        kn: {
+          heading: "ಸರ್ವೇಗಳಿಗೆ ಭಾರತೀಯ ಸಂವಿಧಾನProvisionಗಳು",
+          para1:
+            'ಭಾರತೀಯ ಸಂವಿಧಾನದ ಕಲಂ ೧೯ರ ಪ್ರಕಾರ, "ಪ್ರತಿಯೊಬ್ಬರೂ ಅಭಿಪ್ರಾಯ ಮತ್ತು ಅಭಿವ್ಯಕ್ತಿಯ ಸ್ವಾತಂತ್ರ್ಯದ ಹಕ್ಕನ್ನು ಹೊಂದಿರುತ್ತಾರೆ. ಈ ಹಕ್ಕಿನಲ್ಲಿ ಯಾವುದೇ ಹಸ್ತಕ್ಷೇಪವಿಲ್ಲದೆ ಅಭಿಪ್ರಾಯವನ್ನು ಹೊಂದಿರುವ ಸ್ವಾತಂತ್ರ್ಯ ಮತ್ತು ಯಾವುದೇ ಮಾಧ್ಯಮದ ಮೂಲಕ, ಹಾಗೂ ಗಡಿಗಳನ್ನು ಲೆಕ್ಕಿಸದೇ, ಮಾಹಿತಿಯನ್ನೂ ಕಲ್ಪನೆಗಳನ್ನು ಹುಡುಕುವ, ಸ್ವೀಕರಿಸುವ ಮತ್ತು ಹರಡುವ ಹಕ್ಕು ಕೂಡ ಒಳಗೊಂಡಿರುತ್ತದೆ." ಸುಪ್ರೀಂ ಕೋರ್ಟ್ ಕೂಡ ಹೇಳಿದೆ: "ಮಾತು ಮತ್ತು ಅಭಿವ್ಯಕ್ತಿಯ ಸ್ವಾತಂತ್ರ್ಯದಲ್ಲಿ ಮಾಹಿತಿ ನೀಡುವ ಹಾಗೂ ಸ್ವೀಕರಿಸುವ ಹಕ್ಕು ಕೂಡ ಸೇರಿದೆ, ಇದು ಅಭಿಪ್ರಾಯವನ್ನು ಹೊಂದಿರುವ ಸ್ವಾತಂತ್ರ್ಯವನ್ನು ಒಳಗೊಂಡಿರುತ್ತದೆ."',
+          para2:
+            "Nexastats ಎಂಬುದು ಭಾರತೀಯ ಕಾನೂನು ಪಾಲನೆಯೊಂದಿಗಿರುವ ಟ್ರಸ್ಟ್ ರೂಪದಲ್ಲಿ ಸ್ಥಾಪಿತವಾದ ಸಂಸ್ಥೆ. ಇದು ಅದರ ಆರಂಭದಿಂದಲೇ ಚುನಾವಣೆ ಮತ್ತು ಬ್ರ್ಯಾಂಡ್ ಕ್ಷೇತ್ರಗಳಲ್ಲಿ ಮಾರುಕಟ್ಟೆ ಸಂಶೋಧನೆಗಳಲ್ಲಿ ತೊಡಗಿಕೊಂಡಿದೆ. ಇದು ಯಾವುದೇ ರಾಜಕೀಯ ಪಕ್ಷ ಅಥವಾ ಸಂಸ್ಥೆಯೊಂದಿಗೂ ಸಂಬಂಧವಿಲ್ಲದೆ, ಸಾಮಾಜಿಕ-ಆರ್ಥಿಕ ವಿಷಯಗಳ ಬಗ್ಗೆ ಜನರ ಅಭಿಪ್ರಾಯವನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಸಂಗ್ರಹಿಸುತ್ತಿದೆ. ನೀತಿಸಂಯುಕ್ತ ಮತ್ತು ಸ್ವಯಂಚ್ಛೆಯಿಂದ ಜನರ ಅಭಿಪ್ರಾಯವನ್ನು ಪಡೆಯುವುದು ಸಂವಿಧಾನದ ವ್ಯಾಪ್ತಿಯಲ್ಲಿದ್ದು, ಜನತಾಂತ್ರಿಕ ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಮಹತ್ವದ ಪಾತ್ರ ವಹಿಸುತ್ತದೆ.",
+          para3:
+            "Nexastats ನ ನಿಯೋಜಿತ ಸಿಬ್ಬಂದಿಯಿಂದ ನಡೆಸಲ್ಪಡುವ ಕ್ಷೇತ್ರೀಯ ಚಟುವಟಿಕೆಗಳಿಗೆ ಯಾವುದೇ ವ್ಯಕ್ತಿ, ಸಂಸ್ಥೆ ಅಥವಾ ಸಂಘಟನೆಯಿಂದ ವಿಘ್ನ ಉಂಟಾದರೆ, ಅದು ಭಾರತೀಯ ಸಂವಿಧಾನದಿಂದ ನೀಡಲಾದ ಜನತಾಂತ್ರಿಕ ಹಕ್ಕಿಗೆ ವಿರೋಧವಾಗಿದೆ ಎಂದು ಪರಿಗಣಿಸಲಾಗುತ್ತದೆ ಮತ್ತು ಕಾನೂನು ಕ್ರಮ ಕೈಗೊಳ್ಳಲಾಗುತ್ತದೆ.",
+        },
+        te: {
+          heading: "సర్వేలకు భారత రాజ్యాంగపు నిబంధనలు",
+          para1:
+            'భారత రాజ్యాంగం ఆర్టికల్ 19 ప్రకారం, "ప్రతి వ్యక్తికి తన అభిప్రాయాన్ని వ్యక్తీకరించే స్వేచ్ఛ కలదు. ఈ హక్కు అంతర్గతంగా ఎలాంటి జోక్యం లేకుండా అభిప్రాయాలను ఏర్పరచుకోవడం, ఎలాంటి మీడియా అయినా గానీ, సరిహద్దులకతీతంగా సమాచారం మరియు ఆలోచనలను వెతకడం, స్వీకరించడం మరియు పంచుకోవడం వంటి హక్కులను కలిగి ఉంటుంది." అలాగే, భారత సుప్రీం కోర్టు కూడా పేర్కొంది: "మాటల స్వేచ్ఛ, వ్యక్తీకరణ హక్కులో సమాచారం అందించడం మరియు స్వీకరించడం కూడా ఉంది, ఇది అభిప్రాయ స్వేచ్ఛను కలిగి ఉంటుంది."',
+          para2:
+            "Nexastats అనేది భారత చట్టాలను పాటించే ట్రస్ట్‌గా నమోదైన సంస్థ. ఇది స్థాపితమైనప్పటి నుండి ఎన్నికలు మరియు బ్రాండ్ సంబంధిత రంగాల్లో మార్కెట్ రీసెర్చ్ కార్యక్రమాలలో పాల్గొంటోంది. ఇది ఏ రాజకీయ పార్టీ లేదా సంస్థకు అనుబంధంగా లేకుండా సామాజిక-ఆర్థిక అంశాలపై ప్రజల అభిప్రాయాలను స్వచ్ఛందంగా సేకరిస్తోంది. ప్రజలను శక్తివంతం చేయడానికిగాను నైతికంగా అభిప్రాయాలను సేకరించడం రాజ్యాంగ పరిధిలోకి వస్తుంది మరియు ప్రజాస్వామ్య వ్యవస్థలో కీలక పాత్ర పోషిస్తుంది.",
+          para3:
+            "Nexastats నియమించిన సిబ్బంది జరిపే ఫీల్డ్ కార్యకలాపాలకు ఏ వ్యక్తి, సంస్థ లేదా సంఘం అడ్డంకులు కలిగించినట్లయితే, దానిని భారత రాజ్యాంగం కలిగించిన ప్రజాస్వామ్య హక్కులకి విఘాతం గా పరిగణించి, చట్టపరమైన చర్యలు తీసుకోబడతాయి.",
+        },
+        gu: {
+          heading: "સર્વે માટે ભારતીય બંધારણીય જોગવાઈઓ",
+          para1:
+            'ભારતના બંધારણના કલમ ૧૯ મુજબ, "દરેક વ્યક્તિને અભિપ્રાય અને અભિવ્યક્તિની સ્વતંત્રતા મળેલી છે. આ હક્કમાં વિના વિક્ષેપે પોતાનાં અભિપ્રાયો રાખવાનો હક્ક તેમજ કોઈ પણ માધ્યમ અને સરહદોની પરવાનગી વગર માહિતી અને વિચારો શોધવા, પ્રાપ્ત કરવા અને પહોંચાડવાનો હક્ક સમાવિષ્ટ છે." additionally, સુપ્રીમ કોર્ટએ પણ જણાવ્યું છે કે: "અભિવ્યક્તિ અને વક્તવ્યની સ્વતંત્રતા એ માહિતી આપવાની અને મેળવવાની આઝાદીનો પણ સમાવેશ કરે છે, જેમાં અભિપ્રાય રાખવાનો હક્ક શામેલ છે."',
+          para2:
+            "Nexastats એ એક કાયદાનું પાલન કરતી ભારતીય સંસ્થા છે, જે ટ્રસ્ટ તરીકે નોંધાયેલ છે. તેની શરૂઆતથી જ તે ચૂંટણી અને બ્રાન્ડ સંબંધિત ક્ષેત્રોમાં માર્કેટ રિસર્ચ પ્રવૃત્તિઓમાં સંકળાયેલી છે. તે કોઈ પણ રાજકીય પક્ષ કે સંગઠન સાથે જોડાયેલ નથી અને સામાજિક-આર્થિક મુદ્દાઓ પર લોકોને સ્વૈચ્છિક રીતે પુછતાં અભિપ્રાયો એકત્રિત કરે છે. નૈતિક માળખાં હેઠળ અને સંવિધાનિક મર્યાદામાં રહીને નાગરિકોને સશક્ત બનાવવા માટે આવી પ્રવૃત્તિઓ લોકશાહી પ્રક્રિયામાં મહત્વપૂર્ણ ભૂમિકા ભજવે છે.",
+          para3:
+            "Nexastats દ્વારા નિયુક્ત કરાયેલ કર્મચારીઓ દ્વારા કરવામાં આવતી ફીલ્ડ પ્રવૃત્તિઓમાં કોઈપણ વ્યક્તિ, સંસ્થા કે સંગઠન દ્વારા વિઘ્ન મૂકવામાં આવશે તો તે ભારતીય બંધારણે આપેલા લોકશાહી હક્કોમાં વિક્ષેપ ગણાશે અને તે વિરુદ્ધ કાયદેસર પગલાં લેવામાં આવશે.",
+        },
+        pa: {
+          heading: "ਸਰਵੇ ਲਈ ਭਾਰਤੀ ਸੰਵਿਧਾਨਕ ਪ੍ਰਵਧਾਨ",
+          para1:
+            'ਭਾਰਤੀ ਸੰਵਿਧਾਨ ਦੇ ਲੇਖ 19 ਦੇ ਅਨੁਸਾਰ, "ਹਰ ਇੱਕ ਨੂੰ ਆਪਣੇ ਅਭਿਪ੍ਰਾਇ ਅਤੇ ਅਭਿਵ੍ਯਕਤੀ ਦੀ ਸੁਤੰਤਰਤਾ ਦਾ ਅਧਿਕਾਰ ਹੈ। ਇਸ ਅਧਿਕਾਰ ਵਿੱਚ ਬਿਨਾਂ ਰੁਕਾਵਟ ਆਪਣੇ ਅਭਿਪ੍ਰਾਇ ਰੱਖਣ ਦਾ ਅਧਿਕਾਰ ਅਤੇ ਕਿਸੇ ਵੀ ਮਾਧਿਅਮ ਦੁਆਰਾ ਅਤੇ ਸਰਹਦਾਂ ਤੋਂ ਪਰੇ ਜਾਣਕਾਰੀ ਅਤੇ ਵਿਚਾਰਾਂ ਦੀ ਖੋਜ ਕਰਨ, ਪ੍ਰਾਪਤ ਕਰਨ ਅਤੇ ਪ੍ਰਸਾਰਿਤ ਕਰਨ ਦਾ ਅਧਿਕਾਰ ਸ਼ਾਮਲ ਹੈ।" ਇਸਦੇ ਨਾਲ ਨਾਲ, ਸੁਪਰੀਮ ਕੋਰਟ ਨੇ ਵੀ ਇਹ ਦੱਸਿਆ ਕਿ: "ਬੋਲੀ ਅਤੇ ਅਭਿਵ੍ਯਕਤੀ ਦੀ ਸੁਤੰਤਰਤਾ ਵਿੱਚ ਜਾਣਕਾਰੀ ਦੇਣ ਅਤੇ ਪ੍ਰਾਪਤ ਕਰਨ ਦਾ ਅਧਿਕਾਰ ਸ਼ਾਮਲ ਹੈ, ਜਿਸ ਵਿੱਚ ਅਭਿਪ੍ਰਾਇ ਰੱਖਣ ਦੀ ਸੁਤੰਤਰਤਾ ਵੀ ਸ਼ਾਮਲ ਹੈ।"',
+          para2:
+            "Nexastats ਇੱਕ ਕਾਨੂੰਨੀ ਤੌਰ 'ਤੇ ਕਾਇਮ ਭਾਰਤੀ ਸੰਸਥਾ ਹੈ ਜੋ ਇੱਕ ਟਰਸਟ ਦੇ ਤੌਰ 'ਤੇ ਰਜਿਸਟਰ ਹੋਈ ਹੈ। ਇਸ ਨੇ ਆਪਣੀ ਸ਼ੁਰੂਆਤ ਤੋਂ ਹੀ ਚੁਣਾਵ ਅਤੇ ਬ੍ਰਾਂਡ ਖੇਤਰਾਂ ਵਿੱਚ ਮਾਰਕੀਟ ਰਿਸਰਚ ਗਤੀਵਿਧੀਆਂ ਵਿੱਚ ਹਿੱਸਾ ਲਿਆ ਹੈ। ਇਹ ਕਿਸੇ ਵੀ ਰਾਜਨੀਤੀ ਪਾਰਟੀ ਜਾਂ ਸੰਗਠਨ ਨਾਲ ਜੁੜਿਆ ਨਹੀਂ ਹੈ ਅਤੇ ਸਮਾਜਿਕ-ਆਰਥਿਕ ਮੁੱਦਿਆਂ 'ਤੇ ਲੋਕਾਂ ਦੇ ਅਭਿਪ੍ਰਾਇ ਸਵੈਚਛਿਕ ਤੌਰ 'ਤੇ ਇਕੱਠੇ ਕਰਦਾ ਹੈ। ਨੈਤਿਕ ਢਾਂਚੇ ਹੇਠ ਸਵੈਚਛਿਕ ਤੌਰ 'ਤੇ ਲੋਕਾਂ ਦੇ ਅਭਿਪ੍ਰਾਇ ਲੈਣਾ ਸੰਵਿਧਾਨ ਦੀ ਸਰਹੱਦ ਦੇ ਅੰਦਰ ਹੈ ਅਤੇ ਇਹ ਲੋਕਤੰਤਰਿਕ ਪ੍ਰਣਾਲੀ ਵਿੱਚ ਮਹੱਤਵਪੂਰਣ ਭੂਮਿਕਾ ਨਿਭਾਉਂਦਾ ਹੈ।",
+          para3:
+            "Nexastats ਦੁਆਰਾ ਨਿਯੁਕਤ ਕਰਮਚਾਰੀਆਂ ਦੁਆਰਾ ਕੀਤੇ ਜਾ ਰਹੇ ਫੀਲਡ ਅਧਿਕਾਰਾਂ ਵਿੱਚ ਕਿਸੇ ਵੀ ਵਿਅਕਤੀ, ਸੰਗਠਨ ਜਾਂ ਸੰਸਥਾ ਵੱਲੋਂ ਰੁਕਾਵਟ ਪੈਦਾ ਕਰਨ ਨੂੰ ਭਾਰਤੀ ਸੰਵਿਧਾਨ ਦੁਆਰਾ ਦਿੱਤੇ ਗਏ ਲੋਕਤੰਤਰਿਕ ਅਧਿਕਾਰ ਦੀ ਵਿਰੁੱਧਤਾ ਦੇ ਤੌਰ 'ਤੇ ਗਿਣਿਆ ਜਾਵੇਗਾ ਅਤੇ ਇਸਦੇ ਵਿਰੁੱਧ ਕਾਨੂੰਨੀ ਕਦਮ ਉਠਾਏ ਜਾਣਗੇ।",
+        },
+      };
+
+      function changeLanguage() {
+        const lang = document.getElementById("language").value;
+        const t = content[lang];
+        document.getElementById("heading").innerText = t.heading;
+        document.getElementById("para1").innerText = t.para1;
+        document.getElementById("para2").innerText = t.para2;
+        document.getElementById("para3").innerText = t.para3;
+      }
+
+      window.onload = changeLanguage;
+    </script>
   </body>
 </html>
