index and privacy update

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-house-damage fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Market Trend Forecasting</h3>
-                    <p class="mb-0">Predicting industry trends using robust research methodologies.</p>
+                    <h3 class="mb-3">Opinion Poll Surveys</h3>
+                    <p class="mb-0">Executed extensive opinion polls across 20+ states in India.</p>
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
                 <div class="d-block bg-primary h-100 text-center">
                     <img class="img-fluid" src="img/feature.jpg" alt="">
                     <div class="p-4">
-                        <p class="text-white mb-4">Nexatats stands out as a premier market research firm offering end-to-end survey solutions with accuracy, efficiency, and reliability. Our technology-driven approach and experienced team ensure high-quality data collection and insightful analysis.</p>
+                        <p class="text-white mb-4">Nexastats stands out as a premier market research firm offering end-to-end survey solutions with accuracy, efficiency, and reliability. Our technology-driven approach and experienced team ensure high-quality data collection and insightful analysis.</p>
                     </div>
                 </div>
             </div>
