--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@ At Our Company, we uphold the highest standards of transparency in survey resear
                             </div>
                         </div>
 
+                        <p> I agree to receive promotional offers and updates from Nexastats via RCS, SMS, and WhatsApp.</p>
+
                         <div class="col-6">
                             <button id="submit-btn" class="btn btn-primary w-100 h-100" type="submit">Submit</button>
                         </div>
