--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@ At Our Company, we uphold the highest standards of transparency in survey resear
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <a href="mailto:contact@nexastats.com" class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@nexastats.com</a>
                 <p class="mb-0"><a href="privacy_policy.html"><i class="bi bi-shield-lock text-primary me-2 mr-2"></i> <u>Privacy Policy</u></a></p>
+                <p class="mb-0"><a href="terms_and_conditions.html"><i class="bi bi-file-earmark-text text-primary me-2 mr-2"></i> <u>Terms &amp; Conditions</u></a></p>
                 <a href="icps.html" class="mb-0"><i class="bi bi-book text-primary me-2"></i> <u> Indian Constitutional Provisions for Surveys </u> </a>
             </div>
 
