--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -27,17 +27,16 @@
         padding: 20px 30px;
       }
 
-      .content{
+      .content {
         max-width: 1100px;
         margin: auto;
-        .list_content{
-            margin-bottom: 20px;
-        }
-        span{
-            font-weight: bold;
-            color: #333;
-        }
-
+      }
+      .content .list_content {
+        margin-bottom: 20px;
+      }
+      .content span {
+        font-weight: bold;
+        color: #333;
       }
       .content h1 {
         color: #F3525A;
@@ -84,7 +83,7 @@
   </head>
   <body>
     <div class="header">
-                  <a href="index.html"><img src="img\nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;"></a>
+                  <a href="index.html"><img src="img/nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;"></a>
     </div>
     <div class="content">
       <h1>Privacy Policy</h1>
@@ -204,7 +203,7 @@
 
     </div>
     <div class="footer">
-        ©️ NexaStats | All Rights Reserved
+        &copy; NexaStats | All Rights Reserved
     </div>
   </body>
 </html>
