--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,209 +1,192 @@
-<!-- @format -->
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - NexaStats</title>
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-      }
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
-        margin: 0;
-        padding: 0;
-        color: #333;
-        height: 100vh;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Sutram Research Private Limited</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500;600;700&family=Source+Sans+3:wght@400;500;600&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #0d9488;
+      --accent: #f97316;
+      --dark: #0f172a;
+      --muted: #586477;
+      --bg: #f4f8fb;
+      --white: #ffffff;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Source Sans 3', sans-serif;
+      background: var(--bg);
+      color: var(--dark);
+      line-height: 1.75;
+    }
+
+    .header {
+      background: var(--white);
+      border-bottom: 1px solid #e2eaf2;
+      padding: 20px 32px;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .brand {
+      font-family: 'Sora', sans-serif;
+      font-weight: 700;
+      color: var(--dark);
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .brand-mark {
+      width: 36px;
+      height: 36px;
+      border-radius: 10px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      background: linear-gradient(145deg, var(--primary), #0f5f8f);
+      font-size: 0.9rem;
+    }
+
+    .container {
+      max-width: 980px;
+      margin: 40px auto;
+      padding: 0 20px 30px;
+    }
+
+    .card {
+      background: var(--white);
+      border: 1px solid #e0e9f3;
+      border-radius: 20px;
+      box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06);
+      padding: 34px 30px;
+    }
+
+    h1 {
+      font-family: 'Sora', sans-serif;
+      font-size: 2rem;
+      margin-bottom: 6px;
+      color: var(--dark);
+    }
+
+    .meta {
+      color: var(--muted);
+      margin-bottom: 24px;
+    }
+
+    h2 {
+      font-family: 'Sora', sans-serif;
+      font-size: 1.18rem;
+      color: var(--primary);
+      margin: 24px 0 10px;
+    }
+
+    ul {
+      padding-left: 20px;
+      color: var(--dark);
+    }
+
+    a {
+      color: var(--primary);
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: #0b7d72;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 26px;
+      padding: 18px 0 32px;
+      color: var(--muted);
+      font-size: 0.95rem;
+    }
+
+    @media (max-width: 768px) {
       .header {
-        display: flex;
-        background-color: #33333317;
-        padding: 20px 30px;
+        padding: 16px 20px;
       }
 
-      .content {
-        max-width: 1100px;
-        margin: auto;
-      }
-      .content .list_content {
-        margin-bottom: 20px;
-      }
-      .content span {
-        font-weight: bold;
-        color: #333;
-      }
-      .content h1 {
-        color: #F3525A;
-        margin: 40px 0;
-        text-align: center;
-      }
-      p {
-        margin: 0 auto;
-        border-radius: 10px;
+      .card {
+        padding: 26px 20px;
       }
 
-      .list_main{
-        padding: 0;
+      h1 {
+        font-size: 1.6rem;
       }
-      .footer{
-        text-align: center;
-        margin-top: 30px;
-        display: flex;
-        background-color: #152440;
-        justify-content: center;
-        align-items: center;
-        height: 60px;
-        color: #f9f9f9;
-      }
-      @media screen and (max-width: 768px) {
-        .header {
-          flex-direction: column;
-          align-items: center;
-        }
-        .content{
-            padding-left: 30px;
-        }
-        .content h1 {
-          font-size: 1.5em;
-        }
-        p {
-          max-width: 90%;
-          font-size: 0.9em;
-          padding: 10px 15px;
-        }
-      }
-    </style>
+    }
+  </style>
+</head>
+<body>
+  <header class="header">
+    <a class="brand" href="index.html">
+      <span class="brand-mark">SR</span>
+      <span>Sutram Research Private Limited</span>
+    </a>
+  </header>
 
-  </head>
-  <body>
-    <div class="header">
-                  <a href="index.html"><img src="img/nexastats_logo.png" alt="Logo" style="width: 180px; height: 60px;"></a>
-    </div>
-    <div class="content">
+  <main class="container">
+    <article class="card">
       <h1>Privacy Policy</h1>
-      <ol class="list_main">
+      <p class="meta">Last Updated: February 2, 2026</p>
 
-            <li class="list_content">
-              <span>
-                   Terms
-                </span>
-                <p>
-                    By accessing this website, you are agreeing to be bound by these website Terms and Conditions of Use, applicable laws and regulations and their compliance. If you disagree with any of the stated terms and conditions, you are prohibited from using or accessing this site. The materials contained in this site are secured by relevant copyright and trade mark law.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Use License
-                </span>
-                <p>
-                    <ol>
-                        <li>
-                            Permission is allowed to temporarily download one duplicate of the materials (data or programming) on NexaStats's site for individual and non-business use only. This is the just a permit of license and not an exchange of title, and under this permit you may not:
-                            <ul>
-                                <li>modify or copy the materials;</li>
-                                <li>use the materials for any commercial use , or for any public presentation (business or non-business);</li>
-                                <li>attempt to decompile or rebuild any product or material contained on NexaStats's site;</li>
-                                <li>remove any copyright or other restrictive documentations from the materials; or</li>
-                                <li>transfer the materials to someone else or even "mirror" the materials on other server.</li>
-                            </ul>
-                        </li>
-                        <li>
-                            This permit might consequently be terminated if you disregard any of these confinements and may be ended by NexaStats whenever deemed. After permit termination or when your viewing permit is terminated, you must destroy any downloaded materials in your ownership whether in electronic or printed form.
-                        </li>
-                    </ol>
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Disclaimer
-                </span>
-                <p>
-                    The materials on NexaStats's site are given "as is". NexaStats makes no guarantees, communicated or suggested, and thus renounces and nullifies every single other warranties, including without impediment, inferred guarantees or states of merchantability, fitness for a specific reason, or non-encroachment of licensed property or other infringement of rights. Further, NexaStats does not warrant or make any representations concerning the precision, likely results, or unwavering quality of the utilization of the materials on its Internet site or generally identifying with such materials or on any destinations connected to this website.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Constraints
-                </span>
-                <p>
-                    In no occasion should NexaStats or its suppliers subject for any harms (counting, without constraint, harms for loss of information or benefit, or because of business interference,) emerging out of the utilization or powerlessness to utilize the materials on NexaStats's Internet webpage, regardless of the possibility that NexaStats or a NexaStats approved agent has been told orally or in written of the likelihood of such harm. Since a few purviews don't permit constraints on inferred guarantees, or impediments of obligation for weighty or coincidental harms, these confinements may not make a difference to you.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Amendments and Errata
-                </span>
-                <p>
-                    The materials showing up on NexaStats's site could incorporate typographical, or photographic mistakes. NexaStats does not warrant that any of the materials on its site are exact, finished, or current. NexaStats may roll out improvements to the materials contained on its site whenever without notification. NexaStats does not, then again, make any dedication to update the materials.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Links
-                </span>
-                <p>
-                    NexaStats has not checked on the majority of the websites or links connected to its website and is not in charge of the substance of any such connected webpage. The incorporation of any connection does not infer support by NexaStats of the site. Utilization of any such connected site is at the user's own risk.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Site Terms of Use Modifications
-                </span>
-                <p>
-                    NexaStats may update these terms of utilization for its website whenever without notification. By utilizing this site you are consenting to be bound by the then current form of these Terms and Conditions of Use.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                     Governing Law
-                </span>
-                <p>
-                    Any case identifying with NexaStats's site should be administered by the laws of the country of NexaStats State without respect to its contention of law provisions.
-                </p>
-            </li>
-            <li class="list_content">
-                <span>
-                    Privacy Policy
-                </span>
-                <p>
-                    Your privacy is critical to us. Likewise, we have built up this Policy with the end goal you should see how we gather, utilize, impart and reveal and make utilization of individual data. The following blueprints our privacy policy.
-                    <ul>
-                        <li>
-                            Before or at the time of collecting personal information, we will identify the purposes for which information is being collected.
-                        </li>
-                        <li>
-                            we will gather and utilization of individual data singularly with the target of satisfying those reasons indicated by us and for other good purposes, unless we get the assent of the individual concerned or as required by law.
-                        </li>
-                        <li>
-                            we will hold individual data the length of essential for the satisfaction of those reasons.
-                        </li>
-                        <li>
-                            we will gather individual data by legal and reasonable means and, where fitting, with the information or assent of the individual concerned.
-                        </li>
-                        <li>
-                            Personal information ought to be important to the reasons for which it is to be utilized, and, to the degree essential for those reasons, ought to be exact, finished, and updated.
-                        </li>
-                        <li>
-                            we will protect individual data by security shields against misfortune or burglary, and also unapproved access, divulgence, duplicating, use or alteration.
-                        </li>
-                        <li>
-                            we will promptly provide customers with access to our policies and procedures for the administration of individual data.
-                        </li>
-                    </ul>
-                    we are focused on leading our business as per these standards with a specific end goal to guarantee that the privacy of individual data is secure and maintained.
-                </p>
-            </li>
-</ol>
+      <p>This Privacy Policy explains how Sutram Research Private Limited ("we", "our", "us") collects, uses, and protects personal information when you visit <a href="https://sutramresearch.com" target="_blank" rel="noopener noreferrer">sutramresearch.com</a> or engage with our services in Market Research, Analytics, and Consulting.</p>
 
-    </div>
-    <div class="footer">
-        &copy; NexaStats | All Rights Reserved
-    </div>
-  </body>
+      <h2>1. Information We Collect</h2>
+      <ul>
+        <li>Contact details you provide, such as name, email address, organization, and inquiry details.</li>
+        <li>Project information shared by clients for research, analytics, or consulting assignments.</li>
+        <li>Technical usage data such as browser type, device information, and site interaction data.</li>
+      </ul>
+
+      <h2>2. How We Use Information</h2>
+      <ul>
+        <li>To respond to inquiries and provide requested services.</li>
+        <li>To plan, execute, and deliver market research, analytics, and consulting projects.</li>
+        <li>To improve service quality, website performance, and user experience.</li>
+        <li>To meet legal, contractual, and compliance obligations.</li>
+      </ul>
+
+      <h2>3. Data Sharing</h2>
+      <p>We do not sell personal information. We may share data with trusted service providers, research partners, or legal authorities when required for legitimate business operations, contractual delivery, or compliance with applicable law.</p>
+
+      <h2>4. Data Security</h2>
+      <p>We use reasonable administrative, technical, and organizational safeguards to protect personal data against unauthorized access, misuse, disclosure, or loss.</p>
+
+      <h2>5. Data Retention</h2>
+      <p>We retain personal and project-related information only as long as necessary for the stated purpose, contractual commitments, and legal requirements.</p>
+
+      <h2>6. Cookies and Analytics</h2>
+      <p>Our website may use cookies or similar technologies to understand usage patterns and improve website functionality. You may control cookies through your browser settings.</p>
+
+      <h2>7. Your Rights</h2>
+      <p>Subject to applicable law, you may request access, correction, or deletion of your personal information. You may also object to certain processing activities where legally permitted.</p>
+
+      <h2>8. Third-Party Links</h2>
+      <p>Our website may contain links to third-party websites. We are not responsible for the privacy practices of external websites.</p>
+
+      <h2>9. Policy Updates</h2>
+      <p>We may revise this Privacy Policy from time to time. Updated versions will be posted on this page with a revised date.</p>
+
+      <h2>10. Contact</h2>
+      <p>For privacy-related questions or requests, please contact us at <a href="mailto:contact@sutramresearch.com">contact@sutramresearch.com</a>.</p>
+    </article>
+  </main>
+
+  <div class="footer">&copy; Sutram Research Private Limited | All Rights Reserved</div>
+</body>
 </html>
