privacy policy icon

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -40,25 +40,54 @@
     }
 
     .brand {
-      font-family: 'Sora', sans-serif;
-      font-weight: 700;
       color: var(--dark);
       text-decoration: none;
       display: inline-flex;
       align-items: center;
-      gap: 10px;
     }
 
-    .brand-mark {
-      width: 36px;
-      height: 36px;
-      border-radius: 10px;
+    .brand-lockup {
+      display: inline-flex;
+      align-items: center;
+      gap: 2px;
+    }
+
+    .brand-logo-wrap {
+      width: 100px;
+      height: 66px;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
-      background: linear-gradient(145deg, var(--primary), #0f5f8f);
-      font-size: 0.9rem;
+      background: transparent;
+    }
+
+    .brand-logo {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+    }
+
+    .brand-text {
+      display: inline-flex;
+      flex-direction: column;
+      line-height: 1.05;
+    }
+
+    .brand-title {
+      font-family: 'Sora', sans-serif;
+      font-size: 1rem;
+      font-weight: 700;
+      color: var(--dark);
+    }
+
+    .brand-sub {
+      font-family: 'Source Sans 3', sans-serif;
+      font-size: 0.74rem;
+      color: var(--muted);
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
     }
 
     .container {
@@ -121,6 +150,15 @@
         padding: 16px 20px;
       }
 
+      .brand-logo-wrap {
+        width: 86px;
+        height: 58px;
+      }
+
+      .brand-sub {
+        font-size: 0.68rem;
+      }
+
       .card {
         padding: 26px 20px;
       }
@@ -133,9 +171,14 @@
 </head>
 <body>
   <header class="header">
-    <a class="brand" href="index.html">
-      <span class="brand-mark">SR</span>
-      <span>Sutram Research Private Limited</span>
+    <a class="brand brand-lockup" href="index.html">
+      <span class="brand-logo-wrap">
+        <img src="img/logo.png" alt="Sutram Research Private Limited Logo" class="brand-logo">
+      </span>
+      <span class="brand-text">
+        <span class="brand-title">Sutram Research</span>
+        <span class="brand-sub">Private Limited</span>
+      </span>
     </a>
   </header>
 
